[project]
name = "napari-frap-analysis"
version = "0.0.1"
description = "A napari plugin for FRAP analysis"
authors = [{name = "User"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "napari",
    "numpy",
    "scipy",
    "matplotlib",
    "qtpy",
    "magicgui"
]

[project.entry-points."napari.manifest"]
napari-frap-analysis = "napari_frap_analysis:napari.yaml"

[tool.setuptools.packages.find]
where = ["src"]
